--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 
 {
-  "name": "proshop2",
+  "name": "Ecommerce",
   "version": "2.0.0",
   "type": "module",
   "description": "Ecommerce application built with the MERN stack",
